--- a/src/app/(pages)/(private)/Carousel/Carousel.module.css
+++ b/src/app/(pages)/(private)/Carousel/Carousel.module.css
@@ -2,7 +2,8 @@
     background: var(--background);
     color: var(--text-color);
     padding: 10px 20px;
-    max-width: 100vw;
+    max-width: 70vw;
+    margin: 0px auto;
     transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
@@ -51,7 +52,7 @@
 }
 
 .actions > .icon:nth-child(2):hover {
-    color: green;
+    color: #20C997;
 }
 
 .actions > .icon:nth-child(3):hover {
