--- a/src/app/(pages)/(private)/Events/Events.module.css
+++ b/src/app/(pages)/(private)/Events/Events.module.css
@@ -47,7 +47,8 @@
     background: var(--background);
     color: var(--text-color);
     padding: 10px 20px;
-    max-width: 100vw;
+    max-width: 70vw;
+    margin: 0px auto;
     transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
@@ -107,11 +108,11 @@
 }
 
 .actions > a:nth-child(1):hover {
-    color: blue;
+    color: #1E90FF;
 }
 
 .actions > a:nth-child(2):hover {
-    color: green;
+    color: #20C997;
 }
 
 .actions > .icon:nth-child(3):hover {
