--- a/src/app/(pages)/(private)/Users/Users.module.css
+++ b/src/app/(pages)/(private)/Users/Users.module.css
@@ -2,7 +2,8 @@
   background: var(--background);
   color: var(--text-color);
   padding: 10px 20px;
-  max-width: 100vw;
+  max-width: 70vw;
+  margin: 0px auto;
   transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
@@ -42,7 +43,7 @@
 }
 
 .actions > .icon:nth-child(1):hover {
-  color: green;
+  color: #20C997;
 }
 
 .actions > .icon:nth-child(2):hover {
