--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,20 +1,19 @@
 :root {
-  /* Colors -> ( LightTheme ): */
-  --background: #ffffff;
-  --background-reverse: #000000;
-  --text-color: #000000;
-  --text-color-reverse: #ffffff;
-  --red-primary: #b20000;
-  --box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+  --background: #f9f9f9;
+  --background-reverse: #121218;
+  --text-color: #121218;
+  --text-color-reverse: #f9f9f9;
+  --red-primary: #a33535;
+  --box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 .DarkTheme {
-  --background: #000000;
-  --background-reverse: #ffffff;
-  --text-color: #ffffff;
-  --text-color-reverse: #000000;
-  --red-primary: #8f0303;
-  --box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
+  --background: #121218;
+  --background-reverse: #f9f9f9;
+  --text-color: #f9f9f9;
+  --text-color-reverse: #121218;
+  --red-primary: #a33535;
+  --box-shadow: 2px 4px 12px rgba(255, 255, 255, 0.5);
 }
 
 * {
