--- a/src/components/Buttons/ButtonRay/ButtonRay.module.css
+++ b/src/components/Buttons/ButtonRay/ButtonRay.module.css
@@ -8,10 +8,7 @@
     justify-content: center;
     transition: all 0.25s ease;
     border-radius: 0.75rem;
-    background: radial-gradient(65.28% 65.28% at 50% 100%,
-            rgba(178, 0, 0, 0.8) 0%,
-            rgba(178, 0, 0, 0) 100%),
-        linear-gradient(0deg, rgb(209, 92, 92), var(--red-primary));
+    background: var(--red-primary);
     border: none;
     outline: none;
     padding: 12px 18px;
@@ -184,23 +181,6 @@
     font-weight: 500;
     line-height: 1.5;
     transition: color 0.2s ease-in-out;
-}
-
-.buttonRay > .inner > .icon {
-    width: 18px;
-    height: 18px;
-    transition: fill 0.1s linear;
-}
-
-.buttonRay:focus > .inner > .icon {
-    fill: white;
-}
-
-.buttonRay:hover > .inner > .icon {
-    fill: transparent;
-    animation:
-        dasharray 1s linear forwards,
-        filled 0.1s linear forwards 0.95s;
 }
 
 @keyframes dasharray {
