--- a/src/components/CarouselComponent/CarouselComponent.module.css
+++ b/src/components/CarouselComponent/CarouselComponent.module.css
@@ -8,7 +8,7 @@
     margin-bottom: 30px;
     cursor: grab;
     border-radius: 10px;
-    box-shadow: var(--box-shadow);
+    box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.5);
 }
 
 .carousel:active {
