--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999;
+    z-index: 998;
     background: rgba(0, 0, 0, 0.7);
 }
 
@@ -16,29 +16,35 @@
     padding: 20px;
     border-radius: 20px;
     max-width: 90%;
-    max-height: 95vh;
+    max-height: 85vh;
     overflow-y: scroll;
     width: 400px;
 }
 
-.modalContainer > .modalSection > .modalDiv > .modalClose {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+.modalContainer > .modalSection > .modalDiv > .modalHeader {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.modalContainer > .modalSection > .modalDiv > .modalHeader > .modalIcon {
+    display: flex;
+    font-size: 2rem;
+}
+
+.modalContainer > .modalSection > .modalDiv > .modalHeader > .modalClose {
+    justify-self: end;
     background: transparent;
     border: none;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    line-height: 1;
     cursor: pointer;
 }
 
-.modalContainer > .modalSection > .modalDiv > .modalClose:hover {
+.modalContainer > .modalSection > .modalDiv > .modalHeader > .modalClose:hover {
     transition: .3s ease-in-out;
     transform: scale(1.2);
-}
-
-.modalContainer > .modalSection > .modalDiv > .modalIcon {
-    text-align: center;
-    margin: 10px 0px;
 }
 
 .modalContainer > .modalSection > .modalDiv > .modalTitle,
@@ -47,7 +53,6 @@
     text-align: center;
 }
 
-.modalContainer > .modalSection > .modalDiv > .modalTitle,
 .modalContainer > .modalSection > .modalDiv > .modalError > .errorMessage {
     display: flex;
     align-items: center;
